--- a/ark_music/src/main/resources/rawfile/webview_gui/Page_Files/Page_All_Files/css/list_button.css
+++ b/ark_music/src/main/resources/rawfile/webview_gui/Page_Files/Page_All_Files/css/list_button.css
@@ -7,6 +7,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     background-color: rgba(178, 178, 178, 0.2);
+    box-shadow: 0 2px 8px rgba(170, 170, 170, 0.2);
 
     display: flex;
     align-items: center;
@@ -32,6 +33,13 @@
     overflow: hidden;
 
 }
+.list_button div.scrolling {
+   mask-image: linear-gradient(to right, transparent 0%, black 10%, black 90%, transparent 100%);
+   -webkit-mask-image: linear-gradient(to right, transparent 0%, black 10%, black 90%, transparent 100%);
+   mask-composite: exclude;
+   -webkit-mask-composite: xor;
+}
+
 .list_button p {
     font-weight: 450;
     font-size: 15px;
@@ -42,4 +50,14 @@
     display: inline-block;
     position: relative;
     transition: transform 0.3s ease;
+}
+
+/* 标题滚动动画 */
+@keyframes scrollText {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
