--- a/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/css/play_control.css
+++ b/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/css/play_control.css
@@ -22,6 +22,7 @@
     border: none;
     cursor: pointer;
     outline: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
     transition: transform 0.1s ease;
 
