更新了界面，加入了黑白变幻的功能，加入了背景显示。 版本来到0.3.1了。

--- a/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/css/meta_img.css
+++ b/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/css/meta_img.css
@@ -2,10 +2,10 @@
     
     width: 90vw;
     height: 90vw;;
-    background-color: #eaeaea;
+    background-color: rgba(238, 238, 238, 0.6);
     border-radius: 15px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    margin-top: 25px;
+    margin-top: 50px;
 
     overflow: hidden;
     
@@ -15,4 +15,5 @@
     height: 100%;
     object-fit: cover;
     border-radius: 15px;
+    opacity: 0.8;
 }
