--- a/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/css/playback_range.css
+++ b/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/css/playback_range.css
@@ -2,12 +2,12 @@
 
     width: 90vw;
     height: 25px;
-    background-color: #eaeaea;
+    background-color: rgba(238, 238, 238, 0.2);
     border-radius: 50px;
     box-shadow: 0 4px 8px rgba(71, 71, 71, 0.2);
     position: absolute;
     z-index: 700;
-    top: calc(100% - 130px);
+    top: calc(100% - 155px);
 
     display: flex;
     justify-content: space-between;
@@ -37,19 +37,19 @@
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: #007bff;
     cursor: pointer;
 }
 .play_page_playback_frame p {
     
     font-weight: 450;
     font-size: 10px;
-    color: rgb(100, 100, 100);
     white-space: nowrap;
     margin-left: 10px;
     margin-right: 10px;
     padding: 0;
     z-index: 710; /* 确保时间显示在最上层 */
+
+    transition: color 1s ease;
     
 }
 
@@ -60,7 +60,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 50px;
     transition: width 0.05s ease; /* 添加过渡效果 */
 }
