--- a/entry/src/main/resources/rawfile/webview_gui/sound_play/css/sound_play_button.css
+++ b/entry/src/main/resources/rawfile/webview_gui/sound_play/css/sound_play_button.css
@@ -1,7 +1,7 @@
 .sound_play_button {
 
     width: 100%;
-    height: 60%;
+    height: 100%;
     display: flex;
 
 }
@@ -28,28 +28,27 @@
 }
 
 .last_next_button_switch {
-    width: 50%;
-    height: 50%;
-}
-.last_next_button_switch > div {
     position: relative;
     top: 0;
-    left: 5%;
-    width: 250%;
-    height: 100%;
+    left: 30%;
+    width: 125%;
+    height: 50%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-.last_next_button_switch > div > div {
+.last_next_button_switch.play {
+    left: -50%;
+}
+.last_next_button_switch > div {
     height: 100%;
     aspect-ratio: 1/1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.last_next_button_switch > div > div > svg {
+.last_next_button_switch > div > svg {
     width: 100%;
     height: 100%;
 }
