--- a/entry/src/main/resources/rawfile/webview_gui/taskbar/css/taskbar.css
+++ b/entry/src/main/resources/rawfile/webview_gui/taskbar/css/taskbar.css
@@ -1,3 +1,4 @@
+/* 地下任务栏 */
 .taskbar {
 
     width: 90%;
@@ -36,6 +37,7 @@
     top: calc(100vh - 70px - 55px);
 }
 
+/* 任务栏-页面选择器 */
 .taskbar_page {
     height: 50px;
     width: 100%;
@@ -48,6 +50,7 @@
     top: 55px;
 }
 
+/* 图标 */
 .taskbar_page_icon {
 
     height: 50px;
@@ -60,14 +63,14 @@
     position: relative;
 
 }
-
-/* SVG 图标样式 */
 .taskbar_page_icon svg {
     height: 50%;
     aspect-ratio: 1/1;
     flex-shrink: 0;
 }
 
+
+/* 页面切换栏触控遮罩 */
 .taskbar_target {
     
     /* 尺寸覆盖整个 taskbar */
@@ -81,6 +84,7 @@
 
 }
 
+/* 音乐栏遮罩 */
 .taskbar_music_hidden {
     /* 尺寸覆盖整个 taskbar */
     position: absolute;
@@ -91,6 +95,8 @@
     overflow: hidden;
     border-radius: 25px;
 }
+
+/* 音乐栏 */
 .taskbar_music {
 
     /* 尺寸 */
@@ -125,6 +131,7 @@
     z-index: 100;
 }
 
+/* 音乐栏触控板 */
 .taskbar_music_touch {
     position: absolute;
     top: 0;
@@ -134,6 +141,7 @@
     z-index: 900;
 }
 
+/* 歌曲显示栏 */
 .taskbar_music_song_name {
     
     margin-left: 12.5px;
@@ -169,4 +177,48 @@
     font-weight: 500;
     align-items: center;
     text-overflow: ellipsis;
+}
+
+/* taskbar播放按钮 */
+#button_play {
+
+    position: absolute;
+    top: 30%;
+    right: -25px;
+    height: 40%;
+    aspect-ratio: 1/1;
+
+    transition: 
+        right 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+        transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+        fill 1s ease;
+
+}
+#button_play.active {
+    transform: scale(0.85);
+}
+#button_play.show {
+    right: 12.5px;
+}
+
+/* taskbar暂停按钮 */
+#button_pause {
+
+    position: absolute;
+    top: 30%;
+    right: -25px;
+    height: 40%;
+    aspect-ratio: 1/1;
+
+    transition: 
+        right 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+        transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+        fill 1s ease;
+
+}
+#button_pause.active {
+    transform: scale(0.85);
+}
+#button_pause.show {
+    right: 12.5px;
 }
