--- a/entry/src/main/resources/rawfile/webview_gui/player/css/player_controller.css
+++ b/entry/src/main/resources/rawfile/webview_gui/player/css/player_controller.css
@@ -115,3 +115,17 @@
     z-index: 750;
 
 }
+
+/* 反骨的控制按钮 */
+.play_method_button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.play_method_button.active {
+    transform: scale(0.85);
+}
+.play_method_button.hidden {
+    left: -25vw;
+}
