--- a/entry/src/main/resources/rawfile/webview_gui/player/css/title.css
+++ b/entry/src/main/resources/rawfile/webview_gui/player/css/title.css
@@ -11,6 +11,11 @@
     top: 0;
     left: 0;
 
+    transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+}
+.player_title.active {
+    transform: scale(0.9);
 }
 .player_title p {
 
@@ -39,6 +44,11 @@
     top: 50px;
     left: 0;
 
+    transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+}
+.player_sub_title.active {
+    transform: scale(0.9);
 }
 .player_sub_title p {
 
